--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img class="thumbnail" src="https://sun9-east.userapi.com/sun9-19/s/v1/if1/UFOAuJ9ptdLfJsdJR69jCk3QbwXFLlUqIM2E6ewMiaradH1L1EqYPGJOk2tKWU7otkQ7b8rJ.jpg?size=457x600&quality=96&type=album" onclick="openFullScreen(this)">
         <img class="thumbnail" src="https://sun9-east.userapi.com/sun9-19/s/v1/if1/UFOAuJ9ptdLfJsdJR69jCk3QbwXFLlUqIM2E6ewMiaradH1L1EqYPGJOk2tKWU7otkQ7b8rJ.jpg?size=457x600&quality=96&type=album" onclick="openFullScreen(this)">
   <h1></h1>
-      <iframe width="360" height="115" src="https://www.youtube.com/embed/vHsM-kaBHsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="360" height="200" src="https://www.youtube.com/embed/vHsM-kaBHsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
@@ -27,6 +27,13 @@
   <style>
     *{
       font-family: sans-serif;
+    }
+    h1{
+        display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
     }
   img{
   cursor: pointer;
