--- a/index.html
+++ b/index.html
@@ -24,12 +24,71 @@
 </div>
 
   </div>
+  <h1>О Алла, о  Алла , о Алла. Жермен көқтең 7 күнде жаратылған Алла. Теңі  жоқ Алла, баға жетпейтын Алла, тумаған Алла, түғызбаған Алла. О Алла өзіне сіинамын, өзінен коркамын, өзіңең тілек тәлеймын, еқі діниёнын жаксылығын  береғор.  Тілеген  тілеғимды кабел ал.  Жумусым алға бассын. Алла жоң берсін. Балларым аман болсын.  Алла куш қуат берсін, денсаулык болсын, тылегимды колтыктап журсын.</h1>
+  <h1>Бір жас бар – 10 жас деген ойнақтаған,
+Тай мініп, жабағыны ойнақтатқан.
+Келген соң одан әрі – 15 жас бар,
+Жастық шақ еш нәрсені ойлатпаған
+
+20 - да өз жүзіңді түзейсің ғой,
+Шашыңды кейін қарай күзейсің ғой,
+Үлгісін ағалардың көргеннен соң,
+Ой - ойлап әр нәрсені жүдейсің - ғой.
+
+30 - да, 30 - да үй иесі боласың - ғой,
+Балаңды әлди қағып аласың - ғой,
+Келген соң одан әрі – 35 жас,
+Жігіттік қыдырыстан қаласың - ғой.
+
+Бір жас бар – 40 деген – қылыш екен,
+Мойныңды бір жұмысқа бұрыс екен,
+Келген соң одан әрі – 45 жас,
+Борышты болмағаның дұрыс екен.
+
+Елуде ебің келмес еңкейгенмен,
+Қыздарға қолың жетпес көркейгенмен.
+Келген соң – 55 жас, 60 жасқа,
+Шал болып ойнайсың ғой кемпірлермен.
+
+70 - те жер таянбай тұра алмайсың,
+Қолыңа таяқ алмай жүре алмайсың.
+Балаң мен кемпіріңе тілің өтпей,
+Әңгіме көп ішінде құра алмайсың.
+
+80 - де шал боларсың селкілдеген,
+Жел соқса желмен бірге үлпілдеген,
+Балаң мен келініңе тілің өтпей,
+Ренжісіп отырғаның кемпірменен.
+
+90 - да шал боларсың томыртқадай,
+Тастаған шала мұжып омыртқадай,
+Өмірден өтеріңе сенгің келмес,
+Дұшпанға жазатайым бергің келмес.
+Жеткенде жасың 100 - ге, жаның тәтті,
+Қойнына қара жердің кіргің келмес</h1>
+  <h1>Жас келгенде жанында  жарың болсын. Аурудан аулағырак жаңын болсын. Колғабыз беріп турар керек  кезде ақылды ұрпағынңын бары болсын.
+Ұрпағына жоң  айтар халын болсын. Өзін журіп  тұратын әлін болсын.  Ауру қысым бойынды жайлағанда, ем кылып ішетұғын дәрің болсын. Алыс жақын ағайын аман болсын. Хабарласып  тұратын заман болсын. Кезінде туыстарға берген комек, жас ұлғая шаңырағына сый боп толсын.</h1>
+  <h1>Мудрый  человек сказал однажды 3 вещи- никогда не возвращаются обратно: 
+1- время. 2-Слово. 3- Возмож ность.
+3 вещи не следует терять:1- спокойство 2- надежду 3 - честь.
+3 вещи в жизни наиболее ценные: 1- любовь 2- уважение  3- доверия.
+3 вещи в жизни не надежные  1- власть 2- удача 3- состояние.
+3 вещи определяет человека  1- труд 2- честность 3- достижение.
+3 вещи разрушают человека 1- вино 2- гордыня 3- злость.
+3 вещи труднее всего сказать : 1- я люблю тебя 2- прости 3-  помоги мне.</h1>
+  <h1>Мен де   бес тілек бар:
+Береке, бірлік , бакыт.
+Бас амандығы, бауыр бутындіғі. 
+Осының  бәрі бар болсың !
+Қайда журсендерда 
+Дендерініз сау болсын!</h1>
   <style>
-    *{
-      font-family: sans-serif;
-    }
-    h1{
-        display: flex;
+ *{
+  font-family: sans-serif;
+ }
+ h1{
+   font-size: 24px;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -37,7 +96,6 @@
     }
   img{
   cursor: pointer;
-  
 }
 .image-grid .thumbnail {
   width: 290px;
