--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 </div>
 
   </div>
+  
+  <table>
+    <tr>
+      <td>
   <h1>О Алла, о  Алла , о Алла. Жермен көқтең 7 күнде жаратылған Алла. Теңі  жоқ Алла, баға жетпейтын Алла, тумаған Алла, түғызбаған Алла. О Алла өзіне сіинамын, өзінен коркамын, өзіңең тілек тәлеймын, еқі діниёнын жаксылығын  береғор.  Тілеген  тілеғимды кабел ал.  Жумусым алға бассын. Алла жоң берсін. Балларым аман болсын.  Алла куш қуат берсін, денсаулык болсын, тылегимды колтыктап журсын.</h1>
+      </td>
+    </tr>
+    <tr><td>
   <h1>Бір жас бар – 10 жас деген ойнақтаған,
 Тай мініп, жабағыны ойнақтатқан.
 Келген соң одан әрі – 15 жас бар,
@@ -65,9 +72,11 @@
 Өмірден өтеріңе сенгің келмес,
 Дұшпанға жазатайым бергің келмес.
 Жеткенде жасың 100 - ге, жаның тәтті,
-Қойнына қара жердің кіргің келмес</h1>
+    Қойнына қара жердің кіргің келмес</h1></td><tr>
+    <tr><td>
   <h1>Жас келгенде жанында  жарың болсын. Аурудан аулағырак жаңын болсын. Колғабыз беріп турар керек  кезде ақылды ұрпағынңын бары болсын.
-Ұрпағына жоң  айтар халын болсын. Өзін журіп  тұратын әлін болсын.  Ауру қысым бойынды жайлағанда, ем кылып ішетұғын дәрің болсын. Алыс жақын ағайын аман болсын. Хабарласып  тұратын заман болсын. Кезінде туыстарға берген комек, жас ұлғая шаңырағына сый боп толсын.</h1>
+Ұрпағына жоң  айтар халын болсын. Өзін журіп  тұратын әлін болсын.  Ауру қысым бойынды жайлағанда, ем кылып ішетұғын дәрің болсын. Алыс жақын ағайын аман болсын. Хабарласып  тұратын заман болсын. Кезінде туыстарға берген комек, жас ұлғая шаңырағына сый боп толсын.</h1></td></tr>
+    <tr><td>
   <h1>Мудрый  человек сказал однажды 3 вещи- никогда не возвращаются обратно: 
 1- время. 2-Слово. 3- Возмож ность.
 3 вещи не следует терять:1- спокойство 2- надежду 3 - честь.
@@ -75,13 +84,15 @@
 3 вещи в жизни не надежные  1- власть 2- удача 3- состояние.
 3 вещи определяет человека  1- труд 2- честность 3- достижение.
 3 вещи разрушают человека 1- вино 2- гордыня 3- злость.
-3 вещи труднее всего сказать : 1- я люблю тебя 2- прости 3-  помоги мне.</h1>
+    3 вещи труднее всего сказать : 1- я люблю тебя 2- прости 3-  помоги мне.</h1></td></tr>
+    <tr><td>
   <h1>Мен де   бес тілек бар:
 Береке, бірлік , бакыт.
 Бас амандығы, бауыр бутындіғі. 
 Осының  бәрі бар болсың !
 Қайда журсендерда 
-Дендерініз сау болсын!</h1>
+    Дендерініз сау болсын!</h1></td></tr>
+  </table>
   <style>
  *{
   font-family: sans-serif;
@@ -141,7 +152,15 @@
   font-size: 18px;
   cursor: pointer;
 }
-    
+    td{
+  border: 5px solid white;
+  border-radius: 10px;
+      background: black;
+      color: white;
+}
+    body{
+      background: gray;
+    }
   </style>
   <script>
   function openFullScreen(img) {
