--- a/index.html
+++ b/index.html
@@ -1,184 +1,164 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>Бата</h1>
-    <div class="container">
-    <div class="image-grid">
-  <img class="thumbnail" src="https://sun9-west.userapi.com/sun9-68/s/v1/if1/-KYs9cJSosLTvkogjhifXYonT-9Bp7mc_ZLkzjiqHAdbKOcy2tlXvnJDUPNGlD8D4_uW-AQd.jpg?size=239x315&quality=96&type=album" onclick="openFullScreen(this)">
-  <img class="thumbnail" src="https://sun9-east.userapi.com/sun9-19/s/v1/if1/UFOAuJ9ptdLfJsdJR69jCk3QbwXFLlUqIM2E6ewMiaradH1L1EqYPGJOk2tKWU7otkQ7b8rJ.jpg?size=457x600&quality=96&type=album" onclick="openFullScreen(this)">
-        
-  <h1></h1>
-      <iframe width="360" height="200" src="https://www.youtube.com/embed/vHsM-kaBHsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+  
+ 
+<div class="container">
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Әл-Фатиха сүресі
+</button>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Әл-Фатиха сүресі</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h1><p>Ағузу биллаһи минәш шайтанир – ражим.<p>Бисмиллаһир рахманир рахиим,<p> әлхәмду лилләһи раббил ъаләмиин,<p> әррахманир рахиим,<p> мәлики йәумид диин<p> иййәкә нәъбуду уәиййәкә нәстәъиин,<p> иһдинәс сирәтал мустәқиим<p> сирәтал ләз̃иинә әнъамтә ъаләйһим<p> ғайрил мәғдууби ъаләйһим уәләд даааллиин</h1>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div class="full-screen-image-container">
-  <img id="full-screen-image" src="" alt="Full screen image">
-  <button id="close-button" onclick="closeFullScreen()">Х</button>
+  <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Ықылас сүресі
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Ықылас сүресі</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h1><p>Биисмиллаһир рахманир рахим.<p> Қуль һуа аллаһу ахад.<p> Аллаһус сомад.<p> Ләм йалид уа ләм йуләд<p> Уа ләм йакуль ләһу куфуән ахад.</h1>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        </div>
+    </div>
+  </div>
+</div>
+  </div>
+    <div class="container">
+      <div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Мен де бес тілек бар: Береке, бірлік , бакыт. Бас амандығы, бауыр бутындіғі. Осының бәрі бар болсың ! Қайда журсендерда Дендерініз сау болсын!</li>
+  </ul>
+</div>
+      <div class="container">
+      <div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Бір жас бар – 10 жас деген ойнақтаған, Тай мініп, жабағыны ойнақтатқан. Келген соң одан әрі – 15 жас бар, Жастық шақ еш нәрсені ойлатпаған 20 - да өз жүзіңді түзейсің ғой, Шашыңды кейін қарай күзейсің ғой, Үлгісін ағалардың көргеннен соң, Ой - ойлап әр нәрсені жүдейсің - ғой. 30 - да, 30 - да үй иесі боласың - ғой, Балаңды әлди қағып аласың - ғой, Келген соң одан әрі – 35 жас, Жігіттік қыдырыстан қаласың - ғой. Бір жас бар – 40 деген – қылыш екен, Мойныңды бір жұмысқа бұрыс екен, Келген соң одан әрі – 45 жас, Борышты болмағаның дұрыс екен. Елуде ебің келмес еңкейгенмен, Қыздарға қолың жетпес көркейгенмен. Келген соң – 55 жас, 60 жасқа, Шал болып ойнайсың ғой кемпірлермен. 70 - те жер таянбай тұра алмайсың, Қолыңа таяқ алмай жүре алмайсың. Балаң мен кемпіріңе тілің өтпей, Әңгіме көп ішінде құра алмайсың. 80 - де шал боларсың селкілдеген, Жел соқса желмен бірге үлпілдеген, Балаң мен келініңе тілің өтпей, Ренжісіп отырғаның кемпірменен. 90 - да шал боларсың томыртқадай, Тастаған шала мұжып омыртқадай, Өмірден өтеріңе сенгің келмес, Дұшпанға жазатайым бергің келмес. Жеткенде жасың 100 - ге, жаның тәтті, Қойнына қара жердің кіргің келмес.</li>
+  </ul>
+</div>
+    </div>
+      <div class="container">
+      <div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Жас келгенде жанында жарың болсын. Аурудан аулағырак жаңын болсын. Колғабыз беріп турар керек кезде ақылды ұрпағынңын бары болсын. Ұрпағына жоң айтар халын болсын. Өзін журіп тұратын әлін болсын. Ауру қысым бойынды жайлағанда, ем кылып ішетұғын дәрің болсын. Алыс жақын ағайын аман болсын. Хабарласып тұратын заман болсын. Кезінде туыстарға берген комек, жас ұлғая шаңырағына сый боп толсын.</li>
+  </ul>
+</div>
+        <div class="container">
+      <div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">О Алла, о Алла , о Алла. Жермен көқтең 7 күнде жаратылған Алла. Теңі жоқ Алла, баға жетпейтын Алла, тумаған Алла, түғызбаған Алла. О Алла өзіне сіинамын, өзінен коркамын, өзіңең тілек тәлеймын, еқі діниёнын жаксылығын береғор. Тілеген тілеғимды кабел ал. Жумусым алға бассын. Алла жоң берсін. Балларым аман болсын. Алла куш қуат берсін, денсаулык болсын, тылегимды колтыктап журсын.</li>
+  </ul>
+</div>
+          <div class="container">
+      <div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Мудрый человек сказал однажды 3 вещи- никогда не возвращаются обратно: 1- время. 2-Слово. 3- Возмож ность. 3 вещи не следует терять:1- спокойство 2- надежду 3 - честь. 3 вещи в жизни наиболее ценные: 1- любовь 2- уважение 3- доверия. 3 вещи в жизни не надежные 1- власть 2- удача 3- состояние. 3 вещи определяет человека 1- труд 2- честность 3- достижение. 3 вещи разрушают человека 1- вино 2- гордыня 3- злость. 3 вещи труднее всего сказать : 1- я люблю тебя 2- прости 3- помоги мне.</li>
+  </ul>
+</div>
+  <div class="container">
+    <h1>Фатиха сүресі қалай оқылады?</h1>
+    <div class="video-container">
+    <iframe width="360" height="200" src="https://www.youtube.com/embed/vHsM-kaBHsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
   </div>
-  
-  <table>
-    <tr>
-      <td>
-  <h1>О Алла, о  Алла , о Алла. Жермен көқтең 7 күнде жаратылған Алла. Теңі  жоқ Алла, баға жетпейтын Алла, тумаған Алла, түғызбаған Алла. О Алла өзіне сіинамын, өзінен коркамын, өзіңең тілек тәлеймын, еқі діниёнын жаксылығын  береғор.  Тілеген  тілеғимды кабел ал.  Жумусым алға бассын. Алла жоң берсін. Балларым аман болсын.  Алла куш қуат берсін, денсаулык болсын, тылегимды колтыктап журсын.</h1>
-      </td>
-    </tr>
-    <tr><td>
-  <h1>Бір жас бар – 10 жас деген ойнақтаған,
-Тай мініп, жабағыны ойнақтатқан.
-Келген соң одан әрі – 15 жас бар,
-Жастық шақ еш нәрсені ойлатпаған
-
-20 - да өз жүзіңді түзейсің ғой,
-Шашыңды кейін қарай күзейсің ғой,
-Үлгісін ағалардың көргеннен соң,
-Ой - ойлап әр нәрсені жүдейсің - ғой.
-
-30 - да, 30 - да үй иесі боласың - ғой,
-Балаңды әлди қағып аласың - ғой,
-Келген соң одан әрі – 35 жас,
-Жігіттік қыдырыстан қаласың - ғой.
-
-Бір жас бар – 40 деген – қылыш екен,
-Мойныңды бір жұмысқа бұрыс екен,
-Келген соң одан әрі – 45 жас,
-Борышты болмағаның дұрыс екен.
-
-Елуде ебің келмес еңкейгенмен,
-Қыздарға қолың жетпес көркейгенмен.
-Келген соң – 55 жас, 60 жасқа,
-Шал болып ойнайсың ғой кемпірлермен.
-
-70 - те жер таянбай тұра алмайсың,
-Қолыңа таяқ алмай жүре алмайсың.
-Балаң мен кемпіріңе тілің өтпей,
-Әңгіме көп ішінде құра алмайсың.
-
-80 - де шал боларсың селкілдеген,
-Жел соқса желмен бірге үлпілдеген,
-Балаң мен келініңе тілің өтпей,
-Ренжісіп отырғаның кемпірменен.
-
-90 - да шал боларсың томыртқадай,
-Тастаған шала мұжып омыртқадай,
-Өмірден өтеріңе сенгің келмес,
-Дұшпанға жазатайым бергің келмес.
-Жеткенде жасың 100 - ге, жаның тәтті,
-    Қойнына қара жердің кіргің келмес</h1></td><tr>
-    <tr><td>
-  <h1>Жас келгенде жанында  жарың болсын. Аурудан аулағырак жаңын болсын. Колғабыз беріп турар керек  кезде ақылды ұрпағынңын бары болсын.
-Ұрпағына жоң  айтар халын болсын. Өзін журіп  тұратын әлін болсын.  Ауру қысым бойынды жайлағанда, ем кылып ішетұғын дәрің болсын. Алыс жақын ағайын аман болсын. Хабарласып  тұратын заман болсын. Кезінде туыстарға берген комек, жас ұлғая шаңырағына сый боп толсын.</h1></td></tr>
-    <tr><td>
-  <h1>Мудрый  человек сказал однажды 3 вещи- никогда не возвращаются обратно: 
-1- время. 2-Слово. 3- Возмож ность.
-3 вещи не следует терять:1- спокойство 2- надежду 3 - честь.
-3 вещи в жизни наиболее ценные: 1- любовь 2- уважение  3- доверия.
-3 вещи в жизни не надежные  1- власть 2- удача 3- состояние.
-3 вещи определяет человека  1- труд 2- честность 3- достижение.
-3 вещи разрушают человека 1- вино 2- гордыня 3- злость.
-    3 вещи труднее всего сказать : 1- я люблю тебя 2- прости 3-  помоги мне.</h1></td></tr>
-    <tr><td>
-  <h1>Мен де   бес тілек бар:
-Береке, бірлік , бакыт.
-Бас амандығы, бауыр бутындіғі. 
-Осының  бәрі бар болсың !
-Қайда журсендерда 
-    Дендерініз сау болсын!</h1></td></tr>
-  </table>
-  <style>
- *{
-  font-family: sans-serif;
- }
- h1{
-   font-size: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+            <style>
+              body{
+  background: #2C3639!important;
+  color: #DDDDDD!important;
+}
+h1{
+  text-transform: uppercase;
+}
+.modal-body{
+  background: #2D2424;
+}
+.btn-primary {
+  background-color: #834C69!important;
+  border-color: #834C69!important;
+  margin-top: 10px;
+}
+.modal-header{
+  background: #3C4F65!important;
+}
+.video-container {
+  position: relative;
   width: 100%;
-  height: 100%;
-    }
-  img{
-  cursor: pointer;
-}
-.image-grid .thumbnail {
-  width: 290px;
-  height: 200px;
-  object-fit: contain;
+  height: 0;
+  padding-bottom: 56.25%; /* соотношение сторон 16:9 для видео */
 }
 
-.full-screen-image-container {
-  display: none;
-  position: fixed;
+.video-preview {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  align-items: center;
-  justify-content: center;
-  transition: all 0.5s ease-in-out;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.full-screen-image-container.open {
   display: flex;
-  opacity: 1;
-  visibility: visible;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  font-size: 24px;
 }
 
-#full-screen-image {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-#close-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: white;
-  color: black;
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  font-size: 18px;
+.video-preview:hover {
+  opacity: 0.7;
   cursor: pointer;
 }
-    td{
-  border: 5px solid white;
-  border-radius: 10px;
-      background: black;
-      color: white;
-}
-    body{
-      background: gray;
-    }
-  </style>
-  <script>
-  function openFullScreen(img) {
-  var fullScreenImage = document.getElementById("full-screen-image");
-  var closeButton = document.getElementById("close-button");
-  var fullScreenContainer = document.querySelector(".full-screen-image-container");
-  
-  fullScreenImage.src = img.src;
-  fullScreenContainer.classList.add("open");
-}
 
-function closeFullScreen() {
-  var fullScreenImage = document.getElementById("full-screen-image");
-  var fullScreenContainer = document.querySelector(".full-screen-image-container");
-  
-  fullScreenImage.src = "";
-  fullScreenContainer.classList.remove("open");
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-  </script>
+.card{
+  width: 600px!important;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.list-group-item{
+  font-size: 1.5em;
+  color: #CBE4DE!important;
+  background: #180A0A!important;
+  border: 1px solid #261C2C!important;
+}
+            </style>
+            
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
