--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
- 
+ <div class="col-12 col-sm-6 col-md-4 col-lg-3">
 <div class="container">
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
   Әл-Фатиха сүресі
@@ -90,7 +90,7 @@
     <div class="video-container">
     <iframe width="360" height="200" src="https://www.youtube.com/embed/vHsM-kaBHsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-
+            </div>
   </div>
             <style>
               body{
